<?xml version="1.0"?>
<package format="2">
  <name>ladybug_driver</name>
  <version>0.0.1</version>
  <description>ROS driver for Ladybug5 camera</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
</package>