<package format="2">
  <name>ladybug_driver</name>
  <version>0.1.0</version>
  <description>ROS driver for Ladybug5 camera.</description>
  <maintainer email="alirizvi277.ar@gmail.com">Ali Rizvi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>